<resources>
    <string name="app_name">Book4u</string>
    <string name="share_now">Share Now</string>
    <string name="from">from</string>
    <string name="book4u">Book4U</string>
    <string name="livro">LIVRO</string>
    <string name="b4">B4</string>
    <string name="explorar">Explorar</string>
    <string name="categorias">Categorias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="livros_salvos">Livros salvos</string>
    <string name="autores">Autores</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="botao_menu">Botão Menu</string>
    <string name="buscar_livros">Buscar livros</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="voltar">voltar</string>
    <string name="carregando">Carregando...</string>
    <string name="vazio" />
    <string name="termo_vazio">Informe um termo para a busca</string>
    <string name="sem_conexao">Sem conexão</string>
    <string name="sem_resultado">Nenhum resultado encontrado</string>
    <string name="chave">[</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="lgoin">Login</string>
    <string name="senha">Senha</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="cirar_conta">Criar conta</string>
    <string name="editar">Editar</string>
    <string name="endereco">"Endereço: %1$s  \n \n Horário: %4$tr"</string>
    <string name="loading">Carregando…</string>
    <string name="parar_busca">PARAR BUSCA</string>
    <string name="iniciar_busca">INICIAR</string>
    <string name="permissao_recusada">Permissão negada, autorize a aplicação </string>
    <string name="sem_localizacao">Localização Indisponível</string>
    <string name="hint_busca">Clique para iniciar a busca</string>
    <string name="sem_endereco">Endereço indisponível</string>
    <string name="coordenada_invalida">Coordenadas inválidas</string>
    <string name="servico_indisponivel">Esse serviço está indisponível</string>
    <string name="adicionar_aos_favoritos">Adicionar aos favoritos</string>
    <string name="ver_mais">Ver mais</string>
    <string name="valor">Valor</string>
    <string name="categoria">Categoria</string>
    <string name="n_de_p_ginas">N° de Páginas</string>
    <string name="autor">Autor</string>
    <string name="t_tulo_do_livro">Título do Livro</string>
    <string name="resultados">Resultados</string>
    <string name="livros_favoritos">Livros favoritos</string>
</resources>