<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/ColorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/VoltarLivros"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerCrop"
                android:contentDescription="@string/voltar"
                app:srcCompat="@drawable/seta_voltar"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_marginStart="10sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/buscar_livros"
                android:textColor="@color/ColorPrimaryText"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/blue_pink_line"/>

        <EditText
            android:id="@+id/inputLivro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/gray_background"
            android:drawableStart="@drawable/lupa_cinza"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/pesquisar"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"
            android:paddingBottom="8dp"
            android:textColorHint="@color/DarkGray"
            tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnBusca"
            android:onClick="buscaLivros"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/pesquisar"
            android:background="@drawable/blue_rounded"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/ColorWhite"
            android:textAllCaps="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:padding="15dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resultados"
                    android:textColor="@color/Black"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/resultados" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            android:background="@drawable/gray_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_background"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tituloText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/t_tulo_do_livro"
                    android:textColor="@color/Black"
                    android:textSize="17sp"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="12dp"/>

                <TextView
                    android:id="@+id/autorText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/autor"
                    android:textColor="@color/DarkGray"
                    android:textSize="12sp"
                    android:paddingStart="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="12dp"/>

                <TextView
                    android:id="@+id/pagText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/n_de_p_ginas"
                    android:textColor="@color/DarkGray"
                    android:textSize="12sp"
                    android:paddingStart="12dp"
                    android:paddingTop="4dp"
                    android:paddingBottom="2dp"
                    android:paddingEnd="12dp"/>

                <TextView
                    android:id="@+id/catText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/categoria"
                    android:textColor="@color/DarkGray"
                    android:textSize="12sp"
                    android:paddingStart="12dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="12dp"/>

                <TextView
                    android:id="@+id/priceText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""
                    android:hint="@string/valor"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:paddingStart="12dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="12dp"/>


                <Button
                    android:id="@+id/btnLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ver_mais"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/DarkGray"/>

                <Button
                    android:id="@+id/btnSalvar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adicionar_aos_favoritos"
                    android:layout_marginTop="8dp"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textColor="@color/DarkGray"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

