<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_background"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tituloText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/t_tulo_do_livro"
            android:textColor="@color/Black"
            android:textSize="17sp"
            android:paddingStart="12dp"
            android:paddingTop="8dp"
            android:paddingEnd="12dp"/>

        <TextView
            android:id="@+id/autorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/autor"
            android:textColor="@color/DarkGray"
            android:textSize="12sp"
            android:paddingStart="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="8dp"
            android:paddingEnd="12dp"/>

        <Button
            android:id="@+id/btnLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ver_mais"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:gravity="center"
            android:textColor="@color/DarkGray"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>