<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/book4u"
        android:scaleType="centerInside"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/book4u__2_" />

    <ImageView
        android:layout_width="343dp"
        android:layout_height="324dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="56dp"
        android:src="@drawable/book_vector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/userlogin"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/gray_background"
        android:inputType="textEmailAddress"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/lgoin"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/DarkGray"
        android:drawableEnd="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/usersenha"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/gray_background"
        android:drawablePadding="5dp"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp"
        android:paddingBottom="8dp"
        android:textColorHint="@color/DarkGray"
        android:drawableEnd="@drawable/senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userlogin"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/blue_rounded"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/alata"
        android:text="@string/lgoin"
        android:textAllCaps="false"
        android:textColor="@color/ColorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usersenha"
        tools:ignore="HardcodedText" />


    <Button
        android:id="@+id/cadastro"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@drawable/blue_rounded"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="12dp"
        android:text="Cadastre-se"
        android:textAllCaps="false"
        android:textColor="@color/ColorWhite"
        android:fontFamily="@font/alata"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Ou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

</androidx.constraintlayout.widget.ConstraintLayout>